--- a/package.json
+++ b/package.json
@@ -7,5 +7,17 @@
     "test": "test"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "express": "^4.13.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
+    "ejs": "^2.3.4",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.1",
+    "path": "^0.12.7"
+  }
 }
